--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "genius-institute",
+  "name": "giit",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://aiot-enebaled.github.io/giit2024/",
   "type": "module",
   "scripts": {
     "dev": "vite",
