--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^11.0.2",
     "framer-motion": "^11.12.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
@@ -22,6 +21,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -30,7 +30,6 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "firebase-tools": "^13.27.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
