--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "framer-motion": "^11.12.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@emailjs/browser": "^4.4.1",
     "@eslint/js": "^9.9.1",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
